Improve year-range extraction: handle explicit ranges, gather nearby text for generation links, support open-ended ranges (annoFine missing)\n\nCo-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>